Thu Apr 24 20:31:03 2008  Bruno Haible       <bruno@clisp.org>

	* main.c (main): Move call to catch SIGBUG to before installation of
	libsigsegv handler, since on some systems libsigsegv installs its
	own handler for SIGBUS.
	[STACK_SIZE]: Add a constant instead of inline. ADR.

Wed Apr 23 22:30:27 2008  Duncan Moore       <duncan.m00re@btinternet.com>

	* builtin.c (state): Do as an integer array for systems that need it.
	(do_rand, init_rand): Modify call to `initstate' as needed.

Wed Apr 23 22:22:06 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* dfa.c (prednames): Add an extra zero to final initializer to
	silence a compiler warning. Reported by Duncan Moore
	<duncan.m00re@btinternet.com>.

Wed Apr 23 21:36:06 2008  Steffen Schuler    <schuler.steffen@googlemail.com>

	* field.c (fw_parse_field): Add code for multibyte case.

Sat Mar 15 22:17:21 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_length): Handle the case of the parameter being
	an array that was a function parameter.

Tue Mar 11 22:49:11 2008  Kimura Koichi      <kimura.koichi@canon.co.jp>

	* builtin.c (format_tree): Fix call to mbc_byte_count to pass the
	right number of characters based on the format type.

Tue Mar 11 22:31:58 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* libsigsegv: Incorporated into the dist.
	* Makefile.am (SUBDIRS): Added. Make it first so that the library
	is built before gawk is.
	(LDADD): Add the library.
	(AM_CPPFLAGS): Add -I option to find <sigsegv.h> header.
	* configure.ac: Add call to AC_CONFIG_SUBDIRS for libsigsegv.
	* main.c (catchsegv, catchstackoverflow): New functions.
	(main): Call into sigsegv library with them.

Tue Mar  4 21:02:25 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (mbc_char_count, mbc_byte_count): New functions to return
	the number of m.b. chars there are and the number of bytes needed to
	copy them.
	(format_tree): Use them for %s and %c cases to adjust precision and
	for copying characters at pr_tail label.
