@@ -1,3 +1,11 @@
+Mon Dec 29 20:01:24 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 190.
+
+	* builtin.c (format_tree): For `%c' case, add a lint warning
+	if the value is greater than 255.
+	(mbc_byte_count, mbc_char_count): Remove unused variable `i'.
+
 Mon Dec 29 19:49:44 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 189. Ignoring cvsps 188.
